[package]
name = "derive-trait-enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.13.1"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = "1.0.86"

[dev-dependencies]
catty = "0.1.4"
crossbeam-channel = "0.5.2"
flume = "0.10.11"
futures = "0.3.21"
tokio = "1.17.0"
