[package]
name = "trait-enumizer-derive"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/trait-enumizer/"
description = "Helper crate for trait-enumizer"
categories = ["rust-patterns"]
include = ["src","Cargo.toml"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
#darling = "0.13.1"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = {version="1.0.86",features=["full"]}

[features]
# Generate code that uses ::std
std=[]
# Generate code tha tuses ::alloc
alloc=[]
