[package]
name = "trait-enumizer"
version = "0.1.0"
edition = "2021"

[dependencies]
trait-enumizer-derive = {path = "../trait-enumizer-derive"}
flume = {version="0.10.11", optional=true}
crossbeam-channel = {version="0.5.2", optional=true}
tokio = { version = "1.17", optional=true, features=["sync"] }
catty = {version="0.1.4", optional=true}
futures = {version="0.3.21", optional=true}

[dev-dependencies]
catty = "0.1.4"
crossbeam-channel = "0.5.2"
flume = "0.10.11"
futures = "0.3.21"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
slab = "0.4.5"
tokio = { version = "1.17", features = ["rt", "macros", "time"]}

[features]
default=[]
