[package]
name = "trait-enumizer"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/trait-enumizer/"
description = "Proc macro to automatically generate enum based on method signatures (with appropriate helpers)"
keywords = ["enum", "trait", "derive", "enumizer"]
categories = ["rust-patterns"]
include = ["src","Cargo.toml","tests", "README.md", "doc_header.png"]
readme = "README.md"

[dependencies]
trait-enumizer-derive = {path = "../trait-enumizer-derive", version="0.1.0"}
flume = {version="0.10.11", optional=true}
crossbeam-channel = {version="0.5.2", optional=true}
tokio = { version = "1.17", optional=true, features=["sync"] }
catty = {version="0.1.4", optional=true}
futures = {version="0.3.21", optional=true}

[dev-dependencies]
catty = "0.1.4"
crossbeam-channel = "0.5.2"
flume = "0.10.11"
futures = "0.3.21"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
slab = "0.4.5"
tokio = { version = "1.17", features = ["rt", "macros", "time"]}

[features]
default=["std"]
std=["trait-enumizer-derive/std"]
alloc=["trait-enumizer-derive/alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
